<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:alpha="0.15"
        android:contentDescription="@string/logotype"
        android:scaleType="fitCenter"
        android:src="@drawable/logotype" />

    <LinearLayout
        android:id="@+id/single_message_view_headings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="top">

        <TextView
            android:id="@+id/single_message_view_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/single_message_view_from" />

        <TextView
            android:id="@+id/single_message_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="end"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/single_message_view_date" />
    </LinearLayout>

    <TextView
        android:id="@+id/single_message_view_contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/single_message_view_footer"
        android:layout_below="@+id/single_message_view_headings"
        android:layout_margin="16dp"
        android:autoLink="phone|email"
        android:background="@drawable/border"
        android:padding="16dp"
        android:text="@string/single_message_view_contents" />


    <LinearLayout
        android:id="@+id/single_message_view_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:gravity="bottom">

        <TextView
            android:id="@+id/single_message_view_from1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/single_message_view_button_1"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/single_message_view_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/single_message_view_delete"
            />
    </LinearLayout>

</RelativeLayout>