<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"

     android:layout_width="match_parent">
    <ImageView
        android:layout_margin="16dp"
        android:contentDescription="@string/logotype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logotype"
        android:scaleType="fitCenter"
        android:alpha="0.15"/>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/fragment_message_not_read"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_small_button_selected"
            android:gravity="center"
            android:text="@string/fragment_message_unread"
            android:textColor="#113e51" />

        <TextView
            android:id="@+id/fragment_message_all"
            android:layout_width="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_small_button"
            android:gravity="center"
            android:text="@string/fragment_message_all"
            android:textColor="#113e51" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/experience_fragment_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
</RelativeLayout>